syntax = "proto3";

option go_package = ".;proto";

package proto;

// Interface exported by the server.
service PluginManager {
  rpc GetPlugin(GetPluginRequest) returns (GetPluginResponse) {}
}

message GetPluginRequest {
  string connection = 1;
}

message GetPluginResponse {
  string Protocol        =1;
  int64  ProtocolVersion =2;
  NetAddr Addr           = 3;
  int64 Pid              =4;
}

message NetAddr {
  string Network = 1; // name of the network (for example, "tcp", "udp")
  string Address = 2; // string form of address (for example, "192.0.2.1:25", "[2001:db8::1]:80")
}